# ModernGekko

./: CMakeLists.txt  PROVENANCE.md  README.md
include/moderngekko/: runtime.hpp
src/runtime/: dolphin_runtime.cpp  dolphin_runtime_internal.hpp
tests/: frontend_config_test.cpp  netplay_protocol_test.cpp
tools/: frontend_config.cpp  frontend_config.hpp  moderngekko_launcher.cpp  moderngekko_port.cpp  moderngekko_run.cpp  netplay_compatibility.cpp  netplay_compatibility.hpp  netplay_session.cpp  netplay_session.hpp
